// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions incrementIfOdd should always create an incrementIfOdd action 1`] = `
Object {
  "type": "INCREMENT_IF_ODD",
}
`;

exports[`actions should decrement should create decrement action 1`] = `
Object {
  "type": "DECREMENT_COUNTER",
}
`;

exports[`actions should increment should create increment action 1`] = `
Object {
  "type": "INCREMENT_COUNTER",
}
`;
